apps/manifests/vllm-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-api
  namespace: kuberay-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: llm.homelab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vllm-api
                port:
                  number: 8000
